<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddProjectActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/projectName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/projectNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/legoSetCode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/submit"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/add"
        app:icon="@drawable/ic_add_black_24dp" />

</LinearLayout>

